# LabProg_Chat_Master

./: CMakeLists.txt  Chat.cpp  Chat.h  Display.cpp  Display.h  MessageNotification.cpp  MessageNotification.h  Messaggio.cpp  Messaggio.h  Observer.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  TestMessaggio.cpp  UserTest.cpp  runAllTests.cpp
